Tue Apr  9 16:45:48 2002  J"orn Rennecke <joern.rennecke@superh.com>

	* config/tc-sh.h (TC_FIX_ADJUSTABLE): Disable adjusting if
	symbol_used_in_reloc_p is true.

	* config/tc-sh.c (md_apply_fix3): Don't zero relocations on big
	endian hosts.

2002-04-04  Alan Modra  <amodra@bigpond.net.au>

	* dep-in.sed: Cope with absolute paths.
	* Makefile.am (dep.sed): Subst TOPDIR.
	Run "make dep-am".
	* Makefile.in: Regenerate.

2002-04-04  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (mips16_macro_build): Cast type mismatch.
	(mips_ip): Remove unused variable.
	(md_apply_fix3): Cast signed/unsignes mismatches. Replace
	unsigned char with bfd_byte.
	(s_file): Remove unused variable.
	(s_mips_ent): Likewise.

2002-04-03  Tom Rix  <trix@redhat.com>

	* config/tc-d10v.c (d10v_insert_operand): Fix warning in as_bad_where.
	(build_insn): Same.
	(find_opcode): Fix warning in as_warn.
	* config/tc-d10v.h: Update Copyright.

2002-04-03  Alan Matsuoka <alanm@redhat.com>
	    Tom Rix  <trix@redhat.com>

	From Jeff Knaggs <jknaggs@redhat.com>
	* config/tc-d10v.c (check_resource_conflict): New function to 
	check for resource conflicts.

	From Jason Eckhardt  <jle@redhat.com>
        * config/tc-d10v.c (build_insn): Check for unresolved imm4 or
        imm3 fields.
        * config/tc-d10v.c (find_opcode): Emit a warning if one of the
        reserved control registers is used.
        * config/tc-d10v.c (build_insn): Check for unresolved imm4 or
        imm3 fields.

	From 2001-03-28  Diego Novillo  <dnovillo@redhat.com>
        * tc-d10v.c (parallel_ok): Prevent packing only if the first
        instruction cannot be packed.

	From 2001-03-30  Diego Novillo  <dnovillo@redhat.com>
        * gas/config/tc-d10v.c (check_resource_conflict): Only check
        write-write conflicts.
        (md_assemble): Reformat introductory comment.
        * opcodes/d10v-opc.c (d10v_opcodes): `btsti' does not modify its
        arguments.
