@@ -1,3 +1,9 @@
+2002-04-10  Alan Modra  <amodra@bigpond.net.au>
+
+	* as.c (parse_args <OPTION_VERSION>): Use VERSION is
+	BFD_VERSION_STRING unavailable.
+	* config/tc-i386.c (INLINE): Define (for non-BFD assembler).
+
 Tue Apr  9 16:45:48 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* config/tc-sh.h (TC_FIX_ADJUSTABLE): Disable adjusting if
